Added da Christian symbol
I added the cross (cus why not?)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   </table>
   </div>
   <div id='source code'>
-	<h3> <a href="https://github.com/SurfyManx/Saint-Surfy-s-Righteous-Resources"> Source Code </a>
+  <h3> <a href="https://github.com/SurfyManx/Saint-Surfy-s-Righteous-Resources"> Source Code </a>
+  </div>
+  <img src="images/cross.svg" alt="Picture of the Cross (Christ is King)" />
 </body>
 </html>
