--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <div id='christ-summary'>
   <h1> What is Christianity? </h1>
   <h3> We believe that Jesus Christ is our God and he died for us on the cross of calvary. We also believe that as long as you have faith in him you will be saved from eternal suffering </h3>
+  <img src="images/cross.png" alt="Picture of the Cross (Christ is King)" />
   </div>
   <div id='source code'>
   <h3> <a href="https://github.com/SurfyManx/Saint-Surfy-s-Righteous-Resources"> Source Code </a>
   </div>
-  <img src="images/cross.svg" alt="Picture of the Cross (Christ is King)" />
 </body>
 </html>
