--- a/encouragement.html
+++ b/encouragement.html
@@ -18,6 +18,7 @@
 		<td> <img src="images/encouragement/impact.jpg" /> </td>
 		<td> <img src="images/encouragement/redeemedzoomer.jpg" /> </td>
 		<td> <img src="images/encouragement/cliffe.jpg" /> </td>
+		<td> <img src="images/encouragement/christified.jpg" /> </td>
 	</tr>
 	<tr>
 		<td> <a href="https://www.youtube.com/@fiji.christianblue/"> Christian Blue</a> </td>
@@ -26,6 +27,7 @@
 		<td> <a href="https://m.youtube.com/@ImpactVideoMinistries"> Impact Video Ministries</a> </td>
 		<td> <a href="https://m.youtube.com/@redeemedzoomer6053"> Redeemed Zoomer</a> </td>
 		<td> <a href="https://m.youtube.com/@givemeananswer/videos"> Give Me An Answer with Stuart & Cliffe Knechtle</a> </td>
+		<td> <a href="https://disboard.org/server/1302606329277448262"> Christified </a> </td>
 	</tr>
 	</table>
 </body>
