--- a/encouragement.html
+++ b/encouragement.html
@@ -8,28 +8,13 @@
 <body>
   <a href="index.html"> Back to Home Page </a>
   <a href="biblestudy.html"> Bible Study </a>
+  <a href="informative.html"> Informative </a>
 ` <h1> Encouragement Resources </h1>
   <table class="center">
 	<tr>
-		<td> <img src="images/encouragement/christianblue.jpg" /> </td>
-		<td> <img src="images/encouragement/thechristianitypill.jpg" /> </td>
-		<td> <img src="images/encouragement/imbeggar.jpg" /> </td>
-		<td> <img src="images/encouragement/impact.jpg" /> </td>
-		<td> <img src="images/encouragement/redeemedzoomer.jpg" /> </td>
-	</tr>
-	<tr>
-		<td> <a href="https://www.youtube.com/@fiji.christianblue/"> Christian Blue</a> </td>
-		<td> <a href="https://m.youtube.com/@thechristianitypill"> The Christianity Pill</a> </td>
-		<td> <a href=" https://m.youtube.com/@imbeggar"> IMBeggar</a> </td>
-		<td> <a href="https://m.youtube.com/@ImpactVideoMinistries"> Impact Video Ministries</a> </td>
-		<td> <a href="https://m.youtube.com/@redeemedzoomer6053"> Redeemed Zoomer</a> </td>
-	</tr>
-	<tr>
-		<td> <img src="images/encouragement/cliffe.jpg" /> </td>
 		<td> <img src="images/encouragement/christified.jpg" /> </td>
 	</tr>
 	<tr>
-		<td> <a href="https://m.youtube.com/@givemeananswer/videos"> Give Me An Answer with Stuart & Cliffe Knechtle</a> </td>
 		<td> <a href="https://disboard.org/server/1302606329277448262"> Christified </a> </td>
 	</tr>
 	</table>
