--- a/biblestudy.html
+++ b/biblestudy.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <a href="index.html"> Back to Home Page </a>
+  <a href="informative.html"> Informative </a>
   <a href="encouragement.html"> Encouragement </a>
  <h1> Bible Study </h1>
   <table class="center">
