--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 ` <h1> Saint Surfy's Righteous Resources </h1>
   <h3> These are some resources for newly converted Christians. These were really helpful for me so I hope they'll help you as well </h3>
   <table class="center">
+	<tr>
+		<td> <h2> <a href="christsummary.html"> Christianity Summary </a> </h2> </td>
+	</tr>
     <tr>
-      <td> <h2> <a href="biblestudy.html"> Bible Study </a> </h2> </td>
-      <td> <h2> <a href="encouragement.html"> Encouragement </a> </h2> </td>
+		<td> <h2> <a href="biblestudy.html"> Bible Study </a> </h2> </td>
+	</tr>
+	<tr>
+		<td> <h2> <a href="informative.html"> Informative </a> </h2> </td>
+	</tr>
+	<tr>
+		<td> <h2> <a href="encouragement.html"> Encouragement </a> </h2> </td>
     </tr>
   </table>
-  </div>
-  <div id='christ-summary'>
-  <h1> What is Christianity? </h1>
-  <h3> We believe that Jesus Christ is our God and he died for us on the cross of calvary. We also believe that as long as you have faith in him you will be saved from eternal suffering </h3>
   <img src="images/cross.png" alt="Picture of the Cross (Christ is King)" />
   </div>
-  <div id='source code'>
+  </div>
+  <div id='source-code'>
   <h3> <a href="https://github.com/SurfyManx/Saint-Surfy-s-Righteous-Resources"> Source Code </a>
   </div>
 </body>
