--- a/encouragement.html
+++ b/encouragement.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <a href="index.html"> Back to Home Page </a>
+  <a href="index.html"> Home Page </a>
+  <a href="christsummary.html"> Christianity Summary </a>
   <a href="biblestudy.html"> Bible Study </a>
   <a href="informative.html"> Informative </a>
-` <h1> Encouragement Resources </h1>
+  <h1> Encouragement Resources </h1>
   <table class="center">
 	<tr>
 		<td> <img src="images/encouragement/christified.jpg" /> </td>
