--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id='introduction'>
-` <h1> Saint Surfy's Righteous Resources </h1>
+  <h1> Saint Surfy's Righteous Resources </h1>
   <h3> These are some resources for newly converted Christians. These were really helpful for me so I hope they'll help you as well </h3>
   <table class="center">
 	<tr>
