--- a/informative.html
+++ b/informative.html
@@ -6,9 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <a href="index.html"> Back to Home Page </a>
+  <a href="index.html"> Home Page </a>
+  <a href="christsummary.html"> Christianity Summary </a>
   <a href="biblestudy.html"> Bible Study </a>
-` <h1> Informative Resources </h1>
+  <a href="encouragement.html"> Encouragement </a>
+  <h1> Informative Resources </h1>
   <table class="center">
 	<tr>
 		<td> <img src="images/informative/christianblue.jpg" /> </td>
