--- a/biblestudy.html
+++ b/biblestudy.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <a href="index.html"> Back to Home Page </a>
+  <a href="index.html"> Home Page </a>
+  <a href="christsummary.html"> Christianity Summary </a>
   <a href="informative.html"> Informative </a>
   <a href="encouragement.html"> Encouragement </a>
  <h1> Bible Study </h1>
