--- a/christsummary.html
+++ b/christsummary.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<a href="index.html"> Back to Home Page </a>
+	<a href="index.html"> Home Page </a>
 	<a href="biblestudy.html"> Bible Study </a>
 	<a href="informative.html"> Informative </a>
 	<a href="encouragement.html"> Encouragement </a>
 	<h1> What is Christianity? </h1>
-	<h3> So basically God created the heavens and the earth. He created the entire world and gave us free will to choose wether to follow him or our own desires. Unfortunately we chose the latter and allowed sin into our lives and we're all justified to go to hell. All hope's not lost though. God sent his son, Jesus Christ into the world to save us from our dark fate and as long as we have faith in him we will have eternal life. But our goal is not just to get people into heaven. The main goal of Christianity is to spread God's kingdom here on earth. God sends us the Holy Spirit to help us on this mission </h3>
+	<h3> So basically God created the heavens and the earth. He created the entire world and gave us free will to choose wether to follow him or our own desires. Unfortunately we chose the latter and allowed sin into our lives and we're all justified to go to hell. All hope's not lost though. God sent his son, Jesus Christ into the world to save us from our dark fate. He was crucified on the cross of calvary and rose 3 days after his death. As long as we have faith in him we will be saved from our eternal punishment have eternal life with him in heaven. But our goal is not just to get people into heaven. The main goal of Christianity is to spread God's kingdom here on earth. God sends us the Holy Spirit (Sometimes known as the Holy Ghost) to help us on this mission </h3>
