Made the VB Bible Reading Plan a part of website

--- a/biblestudy.html
+++ b/biblestudy.html
@@ -13,14 +13,14 @@
     <tr>
       <td> <img src="images/biblestudy/bible.jpg" /> </td>
       <td> <img src="images/biblestudy/biblegateway.png" /> </td>
-      <td> <img src="" /> </td>
+      <td> <img src="images/biblestudy/vbrp.jpg" /> </td>
       <td> <img src="images/biblestudy/bibleproject.jpg" /> </td>
 	  <td> <img src="images/biblestudy/biblehub.jpg" /> </td>
     </tr>
     <tr>
       <td> <a href="https://www.bible.com/"> Bible</a> by YouVersion </td>
       <td> <a href="https://www.biblegateway.com/"> BibleGateway</a> by Zondervan </td>
-      <td> <a href="https://docs.google.com/document/d/10RqN9HvUTG-mMTjBNnSHxDE5UW32W0NJLznMy_dtLQo/edit?usp=sharing"> The VB Bible Reading Plan</a> by SaintSurfy (that's me :)) </td>
+      <td> <a href="https://saintsurfysrighteousresources.neocities.org/vbbiblereadingplan"> The VB Bible Reading Plan</a> by SaintSurfy (that's me :)) </td>
       <td> <a href="https://bibleproject.com/"> BibleProject</a> by Tim Mackie and Jon Collins </td>
 	  <td> <a href="https://biblehub.com/"> Bible Hub</a> by The Online Parallel Bible Project </td>
     </tr>
