Last finishing touches for overhaul

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id='introduction'>
   <h1> Saint Surfy's Righteous Resources </h1>
-  <h3> These are some resources for newly converted Christians. These were really helpful for me so I hope they'll help you as well </h3>
+  <h3> These are some resources for newly converted Christians. These were really helpful for me so I hope they'll help you as well. </h3>
   <table class="center">
 	<tr>
 		<td> <h2> <a href="christsummary.html"> Christianity Summary </a> </h2> </td>
@@ -25,7 +25,7 @@
   </table>
   <img src="images/cross.png" alt="Picture of the Cross (Christ is King)" />
   </div>
-  </div>
+  <h3> Don't forget to love God above all and your neighbor as yourself! </h3>
   <div id='source-code'>
   <h3> <a href="https://github.com/SurfyManx/Saint-Surfy-s-Righteous-Resources"> Source Code </a>
   </div>
