--- a/encouragement.html
+++ b/encouragement.html
@@ -14,9 +14,11 @@
   <table class="center">
 	<tr>
 		<td> <img src="images/encouragement/christified.jpg" /> </td>
+		<td> <img src="images/encouragement/christianity.jpg" /> </td>
 	</tr>
 	<tr>
 		<td> <a href="https://disboard.org/server/1302606329277448262"> Christified </a> </td>
+		<td> <a href="https://discord.com/servers/christianity-812513854704582686"> Christianity ✞ </a> </td>
 	</tr>
 	</table>
 </body>
