--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title> Saint Surfy's Righteous Resources </title>
-  <link rel="icon" type="image/x-icon" href="/images/ichthus.png">
+  <link rel="icon" type="image/x-icon" href="/images/cross.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
 		<td> <h2> <a href="encouragement.html"> Encouragement </a> </h2> </td>
     </tr>
   </table>
-  <img src="images/cross.png" alt="Picture of the Cross (Christ is King)" />
+  <img src="images/dove.png" alt="Dove (represents the Holy Spirit" />
   </div>
   <h3> Don't forget to love God above all and your neighbor as yourself! </h3>
   <div id='source-code'>
