--- a/biblestudy.html
+++ b/biblestudy.html
@@ -22,7 +22,7 @@
     <tr>
       <td> <a href="https://www.bible.com/"> Bible</a> by YouVersion </td>
       <td> <a href="https://www.biblegateway.com/"> BibleGateway</a> by Zondervan </td>
-      <td> <a href="https://saintsurfysrighteousresources.neocities.org/vbbiblereadingplan"> The VB Bible Reading Plan</a> by SaintSurfy (that's me :)) </td>
+      <td> <a href="The VB Bible Reading Plan.pdf"> The VB Bible Reading Plan</a> by SaintSurfy (that's me :)) </td>
       <td> <a href="https://bibleproject.com/"> BibleProject</a> by Tim Mackie and Jon Collins </td>
 	  <td> <a href="https://biblehub.com/"> Bible Hub</a> by The Online Parallel Bible Project </td>
     </tr>
